# maddrive_ros_shared

./: Dockerfile  LICENSE  README.md  zshrc
ackermann_controller_plugin/: CMakeLists.txt  README.md  package.xml
ackermann_controller_plugin/include/: plugin.h
ackermann_controller_plugin/src/: plugin.cpp
ackermann_raw_controller_plugin/src/: plugin.cpp
maddrive_hardware_tools/: CMakeLists.txt  package.xml
maddrive_hardware_tools/config/gps/: c94_m8p_rover.yaml  simpleRTK2B_rover.yaml
maddrive_hardware_tools/launch/: c94_m8p_rover.launch  driver_realsense.launch  imu.launch  simpleRTK2B_rover.launch  yahboom_imu.launch  ydlidar_X2.launch  ydlidar_X4.launch
maddrive_hardware_tools/rviz/: wit_ros_imu.rviz
maddrive_hardware_tools/scripts/: wit_normal_ros.py
maddrive_ros_shared/: CMakeLists.txt  package.xml
maddrive_teleop/: CMakeLists.txt  package.xml
maddrive_teleop/launch/: start_joy_teleop.launch  start_keyboard_teleop.launch
maddrive_teleop/scripts/: joy_buttons_ctrl.py  joy_ctrl.py
maddrive_teleop/src/cmd_filter/: main.cpp
maddrive_urdf_tools/: CMakeLists.txt  package.xml
maddrive_urdf_tools/urdf/macros/: camera.urdf.xacro  common.urdf.xacro  damping_wheels.urdf.xacro  elp_stereo.urdf.xacro  gps.urdf.xacro  high_freq_zero_noise_gps.urdf.xacro  inertia.urdf.xacro  lidar.urdf.xacro  realsense.urdf.xacro  sector_lidar.urdf.xacro  wheels.urdf.xacro  ydlidar.urdf.xacro
maddrive_urdf_tools/urdf/macros/TODO/: damping_wheels.urdf.xacro
maddrive_worlds/: CMakeLists.txt  package.xml
maddrive_worlds/models/asphalt_ground_plane/: model.config  model.sdf
maddrive_worlds/models/asphalt_ground_plane/materials/scripts/: asphalt_ground_plane.material
maddrive_worlds/worlds/: ETU_asphalt.world  ETU_asphalt_holes.world  city.world  gas.world  polygon.world  room_with_pillars_asphalt_holes.world
scripts/: build.sh  install_hardware_moduls.sh  install_packages.sh  install_third_party.sh  setup_atmega2560.sh  setup_ros_master.sh
