<?xml version="1.0"?>
<package format="2">

  <name>ackermann_controller_plugin</name>
  <version>0.0.0</version>
  <description>The ackermann_controller_plugin package</description>
  <maintainer email="alexey@todo.todo">alexey</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>gazebo_plugins</depend>

</package>
