<?xml version="1.0"?>
<package format="2">

  <name>maddrive_hardware_tools</name>
  <version>0.0.0</version>
  <description>The maddrive_hardware_tools package</description>
  <maintainer email="alexey@todo.todo">alexey</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
