<?xml version="1.0"?>
<package format="2">

  <name>maddrive_teleop</name>
  <version>0.0.0</version>
  <description>the maddrive_teleop package</description>
  <maintainer email="nikita@todo.todo">nikita</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>

</package>
