<?xml version="1.0"?>
<package format="1">

  <name>maddrive_worlds</name>
  <version>0.0.0</version>
  <description>The maddrive_worlds package</description>
  <maintainer email="nikita@todo.todo">nikita</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
